<resources>
    <string name="app_name">Simple Calculator</string>

    <!-- Numbers -->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <!-- Operands -->
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="equal">=</string>
    <string name="point">.</string>
    <string name="bracket">( )</string>

    <!-- Others -->
    <string name="allclear">AC</string>
    <string name="plusminus">+/-</string>
    <string name="basic">BSC</string>
    <string name="formula">FRM</string>
    <string name="mode">MODE</string>

    <string name="backspace">⌫</string>
</resources>